--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   wordpress:
     depends_on:
         - db
-    image: wordpress:latest
+    image: sunilkumar06/project_wordpress:latest
     ports:
       - "80:80"
     environment:
